finally fixed the about section so the pcitrue is align-self: center

--- a/src/App.css
+++ b/src/App.css
@@ -137,14 +137,15 @@ section {
   align-content: center;
 }
 
+.about-image {
+  align-self: center;
+}
+
 .about-photo {
   height: 650px;
   width: auto;
   min-width: 430px;
   flex-shrink: 0;
-  align-items: flex-end;
-
-  order: 0;
 }
 
 .about-text-container {
@@ -288,8 +289,8 @@ figure img {
     width: 100%;
     min-width: 0;
     flex-shrink: 3;
+    justify-content: center;
   }
-
 }
 @media (max-width: 600px) {
   .about-start-section {
